--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,27 @@
                 </configuration>
             </plugin>
 
+            <!-- Build Helper Plugin - Add generated model sources to test classpath -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.4.0</version>
+                <executions>
+                    <execution>
+                        <id>add-test-source</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>models/src</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>            
+
             <!-- GPG Plugin for signing (needed for Maven Central) -->
             <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
